unpackaged/main/default/objects/Case/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>Required for Create Work Order flow</description>
    <formula>TEXT(Account.Account_Status__c)</formula>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>