unpackaged/main/default/objects/Case/fields/Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Action_Required__c</fullName>
    <label>Action Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operative to complete the following works ONLY</fullName>
            </value>
            <value>
                <fullName>Aspect not at fault - Any remedial works are chargeable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>