unpackaged/main/default/objects/Case/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <description>This field is completed via Zaps only and therefore will be blank if not created by the Zapier integration user or the form did not use this field.</description>
    <inlineHelpText>This field is completed via Zaps only and therefore will be blank if not created by the Zapier integration user or the form did not use this field.</inlineHelpText>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>