unpackaged/main/default/objects/Case/fields/Agent_Handling__c.field-meta.xml
<CustomField>
    <fullName>Agent_Handling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Handling</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>