unpackaged/main/default/objects/Case/fields/Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Status__c</fullName>
    <label>Appointment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Scheduled</fullName>
            </value>
            <value>
                <fullName>FSM to Arrange</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>