unpackaged/main/default/objects/Case/fields/Call_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Call_Transferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Transferred</label>
    <type>Checkbox</type>
</CustomField>