unpackaged/main/default/objects/Case/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>Cancellation Reason Text Area</description>
    <inlineHelpText>Please provide a reason for the Cancellation</inlineHelpText>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Longer Required</fullName>
            </value>
            <value>
                <fullName>Found a better alternative</fullName>
            </value>
            <value>
                <fullName>Aspect under performance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>