unpackaged/main/default/objects/Case/fields/Cancellation_Time__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Time__c</fullName>
    <description>Time Stamps when a Case has been Cancelled</description>
    <inlineHelpText>Automatically stamps the time that a Case has been Cancelled</inlineHelpText>
    <label>Cancellation Time</label>
    <type>DateTime</type>
</CustomField>