unpackaged/main/default/objects/Case/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arrival time update</fullName>
            </value>
            <value>
                <fullName>Billing or payment query</fullName>
            </value>
            <value>
                <fullName>Cancel a booking</fullName>
            </value>
            <value>
                <fullName>Change details of a booking</fullName>
            </value>
            <value>
                <fullName>Discuss ongoing or follow-on work</fullName>
            </value>
            <value>
                <fullName>Issue with work carried out</fullName>
            </value>
            <value>
                <fullName>Duration of the job</fullName>
            </value>
            <value>
                <fullName>Expectations of the job</fullName>
            </value>
            <value>
                <fullName>Lack of support</fullName>
            </value>
            <value>
                <fullName>Late arrivals</fullName>
            </value>
            <value>
                <fullName>Missing documents</fullName>
            </value>
            <value>
                <fullName>Poor communication</fullName>
            </value>
            <value>
                <fullName>Trades person</fullName>
            </value>
            <value>
                <fullName>Workmanship</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Overcharge</fullName>
            </value>
            <value>
                <fullName>Time on site</fullName>
            </value>
            <value>
                <fullName>Uncollected</fullName>
            </value>
            <value>
                <fullName>Double billed office</fullName>
            </value>
            <value>
                <fullName>Duplicate Payment</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
            <value>
                <fullName>Resent of documents</fullName>
            </value>
            <value>
                <fullName>Workmanship complaint</fullName>
            </value>
            <value>
                <fullName>Engineer not communicating with client</fullName>
            </value>
            <value>
                <fullName>Report not Produced by Engineer</fullName>
            </value>
            <value>
                <fullName>Digital Comms Error</fullName>
            </value>
            <value>
                <fullName>Report not sent</fullName>
                <isActive>false</isActive>
                <label>Report not sent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>