unpackaged/main/default/objects/Case/fields/Case_Region_Formula__c.field-meta.xml
<CustomField>
    <fullName>Case_Region_Formula__c</fullName>
    <formula>Site__r.Region_Area_Code__c 

/*LEFT(CasePostalCode__c,Find(&quot; &quot;, CasePostalCode__c)-1)

LEFT( CasePostalCode__c , 4)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Region</label>
    <type>Text</type>
</CustomField>