unpackaged/main/default/objects/Case/fields/Case_Selection__c.field-meta.xml
<CustomField>
    <fullName>Case_Selection__c</fullName>
    <inlineHelpText>This determines what Team will handle this case</inlineHelpText>
    <label>Case Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Case</fullName>
                <default>true</default>
                <label>Initial Case</label>
            </value>
            <value>
                <fullName>Additional Sales</fullName>
            </value>
            <value>
                <fullName>Follow Up Task</fullName>
                <isActive>false</isActive>
                <label>Follow Up Task</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>