unpackaged/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing or payment query</fullName>
            </value>
            <value>
                <fullName>Cancel a booking</fullName>
            </value>
            <value>
                <fullName>Change details of booking</fullName>
            </value>
            <value>
                <fullName>Discuss on going or follow-on work</fullName>
            </value>
            <value>
                <fullName>Help or advice about the trade services we provide</fullName>
            </value>
            <value>
                <fullName>Issue with work carried out</fullName>
            </value>
            <value>
                <fullName>Jobs working for Aspect</fullName>
            </value>
            <value>
                <fullName>Make a booking</fullName>
            </value>
            <value>
                <fullName>Sales or marketing</fullName>
            </value>
            <value>
                <fullName>Arrival time update</fullName>
            </value>
            <value>
                <fullName>Fleet/Van/Uniform</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Ops Manager-Shift/ Trade Change</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pay Query</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>