unpackaged/main/default/objects/Case/fields/CC_CHECK__c.field-meta.xml
<CustomField>
    <fullName>CC_CHECK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOR CASE</description>
    <label>CC CHECK</label>
    <type>Checkbox</type>
</CustomField>