unpackaged/main/default/objects/Case/fields/Client_Happy__c.field-meta.xml
<CustomField>
    <fullName>Client_Happy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used for the Complaint Case Type to signify that the client is Happy with the Complaint Resolution and will accompany a textbox to fill out how the Client is Happy</description>
    <label>Client Happy</label>
    <type>Checkbox</type>
</CustomField>