unpackaged/main/default/objects/Case/fields/Client_Happy_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Client_Happy_Explanation__c</fullName>
    <description>This is used for the Complaint Case Type to signify that the client is Happy with the Complaint Resolution</description>
    <label>Client Happy Explanation</label>
    <type>TextArea</type>
</CustomField>