unpackaged/main/default/objects/Case/fields/Client_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Client_Outcome__c</fullName>
    <label>Client Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Happy with outcome</fullName>
            </value>
            <value>
                <fullName>Accepted outcome</fullName>
            </value>
            <value>
                <fullName>Unhappy with outcome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>