unpackaged/main/default/objects/Case/fields/Complaint_Handler__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Handler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the related User who will be Handling the Complaint</description>
    <label>Complaint Handler</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>