unpackaged/main/default/objects/Case/fields/Complaint_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Outcome__c</fullName>
    <description>This picklist will show the outcome of a complaint</description>
    <label>Complaint Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved – Client Happy</fullName>
            </value>
            <value>
                <fullName>Resolved – Client Not Happy</fullName>
            </value>
            <value>
                <fullName>Unresolved – But NFA</fullName>
            </value>
            <value>
                <fullName>Closed – Client Unresponsive</fullName>
            </value>
            <value>
                <fullName>TBC</fullName>
                <isActive>false</isActive>
                <label>TBC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>