unpackaged/main/default/objects/Case/fields/Complaint_Types__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Types__c</fullName>
    <description>This picklist will show the Type of complaint</description>
    <label>Complaint Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Complaint_Type</valueSetName>
    </valueSet>
</CustomField>