unpackaged/main/default/objects/Case/fields/Concerns_from_Web__c.field-meta.xml
<CustomField>
    <fullName>Concerns_from_Web__c</fullName>
    <description>Contact Form Options</description>
    <label>Concerns from Web</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arrival time update</fullName>
            </value>
            <value>
                <fullName>Billing or payment query</fullName>
            </value>
            <value>
                <fullName>Cancel a booking</fullName>
            </value>
            <value>
                <fullName>Change details of a booking</fullName>
            </value>
            <value>
                <fullName>Discuss ongoing or follow-on work</fullName>
            </value>
            <value>
                <fullName>Issue with work carried out</fullName>
            </value>
            <value>
                <fullName>Help or advice about the trade services we provide</fullName>
            </value>
            <value>
                <fullName>Make a booking</fullName>
            </value>
            <value>
                <fullName>Jobs working for Aspect</fullName>
            </value>
            <value>
                <fullName>Sales or marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>