unpackaged/main/default/objects/Case/fields/Created_Through_Website_Form__c.field-meta.xml
<CustomField>
    <fullName>Created_Through_Website_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to be hidden as it is only going to be used as part of a process builder on web to case to generate a contact with all of the address information and the phone information</description>
    <label>Created Through Website Form</label>
    <type>Checkbox</type>
</CustomField>