unpackaged/main/default/objects/Case/fields/Created_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Created_Time_Stamp__c</fullName>
    <description>Holds the Time Stamp of when this Case was created from the Community and in Salesforce</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Time Stamp</label>
    <type>DateTime</type>
</CustomField>