unpackaged/main/default/objects/Case/fields/Deduction_on_which_operative__c.field-meta.xml
<CustomField>
    <fullName>Deduction_on_which_operative__c</fullName>
    <label>Deduction on which operative?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>