unpackaged/main/default/objects/Case/fields/Deduction_Value__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Value__c</fullName>
    <label>Deduction Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>