unpackaged/main/default/objects/Case/fields/Engineer_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Deduction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineer Deduction</label>
    <referenceTo>Deduction__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>