unpackaged/main/default/objects/Case/fields/Engineer_Pay_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Pay_Requisition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineer Pay Requisition</label>
    <referenceTo>Engineer_Pay_Requisition__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>