unpackaged/main/default/objects/Case/fields/Existing_Job__c.field-meta.xml
<CustomField>
    <fullName>Existing_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Job</label>
    <type>Checkbox</type>
</CustomField>