unpackaged/main/default/objects/Case/fields/Field_Support_Request_from_Office__c.field-meta.xml
<CustomField>
    <fullName>Field_Support_Request_from_Office__c</fullName>
    <label>Field Support Request from Office</label>
    <type>TextArea</type>
</CustomField>