unpackaged/main/default/objects/Case/fields/Field_Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Support_Type__c</fullName>
    <label>Field Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Field_Support_Type</valueSetName>
    </valueSet>
</CustomField>