unpackaged/main/default/objects/Case/fields/FSM_info__c.field-meta.xml
<CustomField>
    <fullName>FSM_info__c</fullName>
    <label>FSM info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Adequate</fullName>
            </value>
            <value>
                <fullName>Not sufficient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>