unpackaged/main/default/objects/Case/fields/FurtherWorkChargeable_does_Client_accept__c.field-meta.xml
<CustomField>
    <fullName>FurtherWorkChargeable_does_Client_accept__c</fullName>
    <label>FurtherWorkChargeable-does Client accept</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>