unpackaged/main/default/objects/Case/fields/If_diff_Operative_which_do_you_request__c.field-meta.xml
<CustomField>
    <fullName>If_diff_Operative_which_do_you_request__c</fullName>
    <description>Enter Operative name</description>
    <inlineHelpText>Enter Operative name</inlineHelpText>
    <label>If diff Operative which do you request?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>