unpackaged/main/default/objects/Case/fields/Image_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Image_of_Issue__c</fullName>
    <label>Image of Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>