unpackaged/main/default/objects/Case/fields/Is_Deduction_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Deduction_Required__c</fullName>
    <label>Is Deduction Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>