unpackaged/main/default/objects/Case/fields/Job_Type_Trade__c.field-meta.xml
<CustomField>
    <fullName>Job_Type_Trade__c</fullName>
    <formula>Job__r.Job_Type_Trade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Type Trade</label>
    <type>Text</type>
</CustomField>