unpackaged/main/default/objects/Case/fields/Lead_Booked__c.field-meta.xml
<CustomField>
    <fullName>Lead_Booked__c</fullName>
    <label>Lead Booked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Booked</valueSetName>
    </valueSet>
</CustomField>