unpackaged/main/default/objects/Case/fields/List_any_works_to_be_completed_FOC__c.field-meta.xml
<CustomField>
    <fullName>List_any_works_to_be_completed_FOC__c</fullName>
    <label>List any works to be completed FOC</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>