unpackaged/main/default/objects/Case/fields/Name_of_FSM__c.field-meta.xml
<CustomField>
    <fullName>Name_of_FSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of FSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesNameOfCSM</relationshipName>
    <type>Lookup</type>
</CustomField>