unpackaged/main/default/objects/Case/fields/Office_actions__c.field-meta.xml
<CustomField>
    <fullName>Office_actions__c</fullName>
    <label>Office actions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office actions</fullName>
            </value>
            <value>
                <fullName>To action default</fullName>
            </value>
            <value>
                <fullName>With client</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>