unpackaged/main/default/objects/Case/fields/Office_Notes__c.field-meta.xml
<CustomField>
    <fullName>Office_Notes__c</fullName>
    <description>Max of 3,000 characters</description>
    <inlineHelpText>Max of 3,000 characters</inlineHelpText>
    <label>Office Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>