unpackaged/main/default/objects/Case/fields/Old_Case_Region__c.field-meta.xml
<CustomField>
    <fullName>Old_Case_Region__c</fullName>
    <formula>LEFT(Postcode__c,Find(&quot; &quot;, Postcode__c)-1)

/*LEFT( CasePostalCode__c , 4)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*old* Case Region</label>
    <type>Text</type>
</CustomField>