unpackaged/main/default/objects/Case/fields/Old_Community_User__c.field-meta.xml
<CustomField>
    <fullName>Old_Community_User__c</fullName>
    <formula>IF(ContactId = $User.ContactId , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*Old* Community User</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>