unpackaged/main/default/objects/Case/fields/Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason__c</fullName>
    <description>If Cancellation Reason Picklist = Other, please enter the Reason here</description>
    <label>Other Reason</label>
    <type>TextArea</type>
</CustomField>