unpackaged/main/default/objects/Case/fields/Pass_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Pass_Approval_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be used as part of the Complaint Approval Process</description>
    <label>Pass Approval Process</label>
    <type>Checkbox</type>
</CustomField>