unpackaged/main/default/objects/Case/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <label>Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>